# Algorithms-and-Data-Structures

s1/: CMakeCache.txt
s1/Project1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
s1/Project1/CMakeProject/: CMakeLists.txt  CMakeProject.vcxproj  CMakeProject.vcxproj.filters  cmake_install.cmake
s1/Project1/CMakeProject/CMakeProject.dir/Debug/: CMakeProject.exe.recipe  CMakeProject.ilk  vc143.idb
s1/Project1/CMakeProject/CMakeProject.dir/Debug/CMakeProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMakeProject.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
s1/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  main.cpp
s1/Project1/Project1/x64/Debug/: vc143.idb
s1/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
s1/Project1/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
s1/Project1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
s1/libpair/: .gitignore  CMakeLists.txt  libpair.sln
s1/libpair/libpair/: Header.h  libpair.vcxproj
